# ft_printf

./: CMakeLists.txt  Makefile  chars.c  colors.c  ft_atoi_base.c  ft_atoi_printf.c  ft_convert_base.c  ft_convert_base_printf.c  ft_memdel.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putstr.c  ft_strchr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strlen.c  ft_strncat.c  ft_strnew.c  g  handle_printf.h  handlers.c  main.c  modificators.c  padding.c  print_chars.c  print_float.c  print_num.c  redirect_print.c  test.c  unicode.cpp
ft_printf/: CMakeLists.txt  ft_printf.c  main.c
libft/: Makefile  ft_atoi.c  ft_itoa.c  ft_printf.h  libft.h
